addons/telemetry/config/grafana-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana-https
  namespace: telemetry
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: example.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
