addons/telemetry/config/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: telemetry
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: grafana-https
  hostnames:
    - example.com
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
